style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");

.no-scroll {
	overflow: hidden;
}

body {
	margin: 0%;
	font-family: "Roboto", sans-serif;
}

nav {
	padding: 1.5em;
	padding-left: 1.5em;
	padding-right: 1.5em;
	height: 2.5em;
	display: flex;
	align-items: center;
	background-color: black;
	position: relative;
	z-index: 15;
}

.logo {
	display: flex;
	justify-content: center;
	align-items: center;
}

.logo svg {
	width: 8.5em;
	height: auto;
	margin-right: 0.4em;
	margin-bottom: 0.1em;
	transition: all 0.2s linear;
}

.logo a svg:hover {
	opacity: 0.8;
}

.logo a {
	color: white;
	text-decoration: none;
	margin-right: 0.2em;
}

.logo a:link {
	color: white;
	text-decoration: none;
}

.help-center {
	font-size: 1.5em;
	padding-left: 0.4em;
	border-left: 2px solid white;
	font-weight: 300;
}

.help-center a:hover {
	text-decoration: underline;
}

.topbar-buttons {
	margin-left: auto;
	display: none;
}

button {
	background: transparent;
	padding: 6px 22px;
	border: none;
}

.burger-menu {
	margin-left: auto;
}

.burger-menu .line {
	transition: y 50ms ease-in 100ms, rotate 100ms ease-in, opacity 0ms 100ms;
	transform-origin: center;
}

.burger-menu[aria-expanded="true"] .line {
	transition: y 50ms ease-in, rotate 100ms ease-in 100ms, opacity 0ms 100ms;
}

.burger-menu[aria-expanded="true"] :is(.top, .bottom) {
	y: 45;
}

.burger-menu[aria-expanded="true"] .top {
	rotate: 45deg;
}

.burger-menu[aria-expanded="true"] .middle {
	opacity: 0;
}

.burger-menu[aria-expanded="true"] .bottom {
	rotate: -45deg;
}

.menu-mobile-closed {
	display: grid;
	justify-content: center;
	align-items: center;
	width: 100%;
	box-sizing: border-box;
	border-top: 1px solid white;
	background-color: #000;
	overflow: hidden;
	height: 0;
	position: absolute;
	z-index: 10;
	transition: all 0.5s ease-in-out;
}

.menu-mobile {
	height: 20em;
	padding: 5em;
}

.menu-mobile-closed button {
	width: 15em;
	background: none;
	border: none;
	color: #fff;
	font-size: 20px;
	font-weight: bold;
	padding-bottom: 1.3em;
}

button.submit-mobile {
	border-bottom: 1px solid lightgray;
}

.topbar-buttons button {
	border-radius: 0.5em;
	font-size: 24px;
	height: 2.1em;
	font-weight: 100;
	margin-left: 0.5em;
	color: #fff;
}

.submit {
	background: #191a1b;
	color: #fff;
	border: 1px solid #fff;
}

.singin {
	padding-left: 32px;
	padding-right: 32px;
	background-color: #4c5fd5;
	border: none;
	transition: all 0.3s linear;
}

.singin:hover {
	background-color: white;
	color: black;
}

header {
	background-color: #dadbf1;
	padding: 1.5em;
	padding-top: 80px;
	padding-bottom: 115px;
}

.headerInner {
	position: relative;
}

.headerInner h1 {
	text-align: center;
	font-size: 32px;
	font-weight: 400;
	margin-bottom: 1em;
}

.headerInner form {
	position: relative;
	z-index: 0;
}

.headerInner input {
	position: relative;
	width: 100%;
	height: 3.5em;
	padding: 1em;
	border-radius: 0.25em;
	border: 1.5px solid rgba(0, 0, 0, 0.579);
	box-shadow: #191a1b56 1px 4px 10px;
	font-size: 18px;
	transition: all 0.3s linear;
}

.headerInner input:focus {
	border-color: #4c5fd5 !important;
	outline: 0;
}

.arrow-svg {
	transform: translateY(-50%);
	bottom: -17px;
	right: 1px;
	position: absolute;
	z-index: 100;
	height: 3em;
	width: 3em;
	transition: all 0.3s linear;
}

.arrow-svg:hover {
	fill: #4c5fd5 !important;
}

.list-container {
	display: grid;
	margin: 1em;
	margin-top: 3em;
}

.list-item {
	display: flex;
	height: fit-content;
	padding: 0.7em;
	margin-bottom: 2em;
}

.list-item h3 {
	font-size: 18px;
	font-weight: 500;
	margin-top: 0;
}

.list-desc {
	margin-top: 1em;
	margin-bottom: 2em;
	font-size: 18px;
	font-weight: 300;
}

.list-desc a {
	text-decoration: none;
	color: #4c5fd5;
}

main a:-webkit-any-link {
	color: #4c5fd5;
	text-decoration: none;
}

.list-icon {
	width: 4em;
	height: 4em;
	margin-right: 1.5em;
}

.list-icon-img {
	width: 4em;
	height: 4em;
}

footer {
	max-height: 100vh;
	min-height: 42em;
	background-color: #000;
	color: #fff;
	padding-left: 1em;
	padding-top: 2em;
}

.footerInner {
	display: grid;
	grid-template-columns: repeat(2, 50%);
	grid-auto-flow: row;
	row-gap: 2.5em;
}

.footerInner h3 {
	font-size: 26px;
	margin-bottom: 0;
}

.footerInner ul {
	list-style: none;
	padding: 0;
}

.footerInner ul li {
	font-size: 16px;
	font-weight: 500;
	margin-bottom: 0.4em;
}
.footerCompany ul {
	margin-bottom: 2em;
}

.footerCompany p {
	margin-top: 0.2em;
	margin-bottom: 0;
}

.logo-footer {
	height: fit-content;
	margin-bottom: 1.5em;
}

.logo-footer svg {
	height: 1.8em;
}

.footerCopyright {
	margin-top: 2em;
	font-size: 20px;
}

.footerCopyright p {
	margin-top: 0;
	margin-bottom: 0.3em;
}

@media screen and (min-width: 768px) {
	nav {
		padding-left: 4%;
		padding-right: 4%;
	}

	header {
		padding-left: calc(1em + 20%);
		padding-right: calc(1em + 20%);
	}

	.headerInner h1 {
		font-size: 42px;
	}

	.list-container {
		margin-top: 5em;
		grid-template-columns: repeat(2, 45%);
		grid-auto-flow: row;
		gap: 1em;
		align-content: center;
		justify-content: center;
	}

	main {
		padding-top: 3em;
		padding-left: 0em;
		padding-bottom: 5em;
	}

	.list-item h3 {
		font-size: 24px;
	}

	.list-icon {
		height: 5em;
		width: 5em;
		margin-right: 2em;
	}

	.list-icon-img {
		height: 5em;
		width: 5em;
	}

	.list-desc {
		font-size: 20px;
	}

	.list-desc a {
		font-size: 18px;
	}

	main a:-webkit-any-link {
		font-size: 18px;
	}

	footer {
		min-height: 20em;
		padding-left: 2.5em;
	}
	.footerInner {
		grid-template-columns: repeat(4, 25%);
	}

	.footerInner ul li {
		font-size: 18px;
	}

	.footerCompany p {
		font-size: 18px;
	}

	.footerCopyright {
		padding: 1em;
		margin-top: 3em;
	}

	.logo-footer svg {
		height: 2em;
	}
}

@media screen and (min-width: 1024px) {
	.burger-menu {
		display: none;
	}

	.menu-mobile {
		display: none;
	}

	.topbar-buttons {
		display: block;
	}

	header {
		padding-left: calc(3em + 20%);
		padding-right: calc(3em + 25%);
	}

	.headerInner h1 {
		font-size: 62px;
	}

	.list-container {
		grid-template-columns: repeat(2, 35%);
		column-gap: 3em;
	}

	.list-item h3 {
		font-size: 32px;
	}
	.list-desc {
		font-size: 24px;
	}
	.list-desc a {
		font-size: 22px;
	}

	main a:-webkit-any-link {
		font-size: 22px;
	}
}

